--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "daisyui": "^5.1.27",
+    "graphql": "^16.12.0",
+    "graphql-request": "^7.3.3",
     "html2canvas-pro": "^1.5.12",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22",
