--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "top8ify",
   "version": "0.0.0",
+  "main": "electron.js",
   "private": true,
   "type": "module",
   "engines": {
@@ -13,7 +14,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "start": "vite build && electron ."
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
@@ -33,6 +35,7 @@
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
     "@vue/tsconfig": "^0.8.1",
+    "electron": "^39.1.2",
     "eslint": "^9.33.0",
     "eslint-plugin-vue": "~10.4.0",
     "jiti": "^2.5.1",
