--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql": "^16.12.0",
     "graphql-request": "^7.3.3",
     "html2canvas-pro": "^1.5.12",
+    "lucide-vue-next": "^0.553.0",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1"
