--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "top8ify",
   "version": "0.0.0",
-  "main": "src/electron/main.js",
+  "main": "electron/main.js",
   "private": true,
   "type": "module",
   "engines": {
@@ -20,13 +20,16 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.14",
     "daisyui": "^5.1.27",
+    "electron-store": "^11.0.2",
     "graphql": "^16.12.0",
     "graphql-request": "^7.3.3",
     "html2canvas-pro": "^1.5.12",
+    "is-electron": "^2.2.2",
     "lucide-vue-next": "^0.553.0",
     "tailwindcss": "^4.1.14",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue3-toastify": "^0.2.8"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.2",
@@ -44,6 +47,7 @@
     "prettier": "3.6.2",
     "typescript": "~5.9.0",
     "vite": "^7.1.7",
+    "vite-plugin-node-polyfills": "^0.24.0",
     "vite-plugin-vue-devtools": "^8.0.2",
     "vue-tsc": "^3.1.0"
   }
