--- a/package.json
+++ b/package.json
@@ -1,23 +1,52 @@
 {
   "name": "top8ify",
-  "version": "0.0.0",
-  "main": "electron/main.js",
-  "private": true,
-  "type": "module",
-  "engines": {
-    "node": "^20.19.0 || >=22.12.0"
-  },
+  "productName": "top8ify",
+  "version": "1.0.0",
+  "description": "A graphic generator for Super Smash Bros. Melee",
+  "main": ".vite/build/main.js",
   "scripts": {
-    "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
-    "preview": "vite preview",
-    "build-only": "vite build",
-    "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
-    "format": "prettier --write src/",
-    "start": "vite build && electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\""
+  },
+  "keywords": [],
+  "author": {
+    "name": "JoeThresher",
+    "email": "71785144+JoeThresher@users.noreply.github.com"
+  },
+  "license": "AGPL-3.0-only",
+  "devDependencies": {
+    "@electron-forge/cli": "^7.10.2",
+    "@electron-forge/maker-deb": "^7.10.2",
+    "@electron-forge/maker-rpm": "^7.10.2",
+    "@electron-forge/maker-squirrel": "^7.10.2",
+    "@electron-forge/maker-zip": "^7.10.2",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.10.2",
+    "@electron-forge/plugin-fuses": "^7.10.2",
+    "@electron-forge/plugin-vite": "^7.10.2",
+    "@electron/fuses": "^1.8.0",
+    "electron": "39.2.2",
+    "vite": "^5.4.21",
+    "@tsconfig/node22": "^22.0.2",
+    "@types/node": "^22.18.6",
+    "@vitejs/plugin-vue": "^6.0.1",
+    "@vitejs/plugin-vue-jsx": "^5.1.1",
+    "@vue/eslint-config-prettier": "^10.2.0",
+    "@vue/eslint-config-typescript": "^14.6.0",
+    "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.33.0",
+    "eslint-plugin-vue": "~10.4.0",
+    "jiti": "^2.5.1",
+    "npm-run-all2": "^8.0.4",
+    "prettier": "3.6.2",
+    "typescript": "~5.9.0",
+    "vite-plugin-node-polyfills": "^0.24.0",
+    "vue-tsc": "^3.1.0"
   },
   "dependencies": {
+    "electron-squirrel-startup": "^1.0.1",
     "@tailwindcss/vite": "^4.1.14",
     "daisyui": "^5.1.27",
     "electron-store": "^11.0.2",
@@ -30,25 +59,5 @@
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "vue3-toastify": "^0.2.8"
-  },
-  "devDependencies": {
-    "@tsconfig/node22": "^22.0.2",
-    "@types/node": "^22.18.6",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vitejs/plugin-vue-jsx": "^5.1.1",
-    "@vue/eslint-config-prettier": "^10.2.0",
-    "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/tsconfig": "^0.8.1",
-    "electron": "^39.1.2",
-    "eslint": "^9.33.0",
-    "eslint-plugin-vue": "~10.4.0",
-    "jiti": "^2.5.1",
-    "npm-run-all2": "^8.0.4",
-    "prettier": "3.6.2",
-    "typescript": "~5.9.0",
-    "vite": "^7.1.7",
-    "vite-plugin-node-polyfills": "^0.24.0",
-    "vite-plugin-vue-devtools": "^8.0.2",
-    "vue-tsc": "^3.1.0"
   }
 }
