--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "html2canvas-pro": "^1.5.12",
     "lucide-vue-next": "^0.553.0",
     "tailwindcss": "^4.1.14",
+    "theme-change": "^2.5.0",
     "vue": "^3.5.22",
     "vue-router": "^4.5.1",
     "vue3-toastify": "^0.2.8"
